[package]
name = "rust_lib_vup_chat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.86"
flutter_rust_bridge = "=2.2.0"
getrandom = { version = "0.2.15", features = ["js"] }
openmls = "0.6.0-pre.1"
openmls_basic_credential = { version = "0.3.0-pre.1", features = ["clonable"] }
openmls_rust_crypto = "0.3.0-pre.1"
openmls_traits = "0.3.0-pre.2"
serde_json = "1.0.125"
thiserror = "1.0.63"
openmls_memory_storage = { version = "0.3.0-pre.2", features = ["test-utils"] }
